Fix CSS comments and formatting in dark mode styles

--- a/Auctions/wwwroot/css/site.css
+++ b/Auctions/wwwroot/css/site.css
@@ -41,7 +41,7 @@ body {
 
 /* darkmode */
 
-/* .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
   color: #ffffff;
   margin-bottom: 57px;
 } 
@@ -96,5 +96,5 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; 
-Vertically center the text there
-} */
+/* Vertically center the text there */
+}
